src/test/data/psi_tree/syntax_errors/error_section.tz
parameter unit;
invalid_namr unit;
code {}